src/objects/User_Extension__c.object
<CustomObject>
    <description>Custom User object is an intersection table to allow other object relationships.   This is required as the Native User Object does not allow new custom object relationships.</description>
    <fields>
        <fullName>CountlyLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup from user to associate with a County</description>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SiteLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User association with a Site</description>
        <label>Site Lookup</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <description>Site Name - Non Lookup</description>
        <label>Site Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserExt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Extension</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Ext</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SiteLookup__c</columns>
        <columns>Organization__c</columns>
        <columns>CountlyLookup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Extension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>